--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -233,3 +233,15 @@ body {
     padding-left: 0 !important;
   }
 }
+
+// Q LAYOUT
+.q-layout__shadow:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /* box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2), 0 0px 10px rgba(0, 0, 0, 0.24); */
+  box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px -1px #0000001a !important;
+}
