--- a/src/css/estilo.scss
+++ b/src/css/estilo.scss
@@ -321,14 +321,15 @@
   .q-tab {
     transition: var(--system-transition);
 
-    &:hover {
-      background-color: rgba(var(--q-primary-rgb), 0.1);
-    }
+    // &:hover {
+    //   background-color: rgba(var(--q-primary-rgb), 0.1);
+    // }
   }
 
   .q-tab--active {
     color: var(--q-primary);
     font-weight: 600;
+    font-size: 12px !important;
   }
 }
 
