--- a/src/css/estilo.scss
+++ b/src/css/estilo.scss
@@ -291,7 +291,10 @@
 // ========================================
 .q-chip {
   border-radius: var(--system-radius);
-  font-weight: 500;
+  font-weight: 400;
+  color: #37474f;
+  // text-overflow: ellipsis;
+  // text-transform: uppercase;
 
   // Chip de status
   &.status-chip {
@@ -306,7 +309,7 @@
 .q-toggle {
   .q-toggle__label {
     color: var(--system-text-primary);
-    font-weight: 500;
+    font-weight: 400;
   }
 
   .q-toggle__track {
