--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -166,6 +166,9 @@ body {
   }
 }
 
+.q-btn--rectangle {
+  border-radius: 2px !important;
+}
 // Q LAYOUT
 .q-layout__shadow:after {
   content: "";
@@ -176,4 +179,24 @@ body {
   left: 0;
   /* box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2), 0 0px 10px rgba(0, 0, 0, 0.24); */
   box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px -1px #0000001a !important;
+}
+
+.titulo-secao {
+  font-size: 0.8rem;
+}
+
+.corpo-secao {
+  padding: 8px 12px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+
+  .titulo-secao {
+    font-size: 0.8rem;
+  }
+
+  .row {
+    width: 100%;
+    justify-content: space-between;
+  }
 }
