--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -209,3 +209,11 @@ body {
     justify-content: space-between;
   }
 }
+
+.modal-titulo {
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #37474f;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
