--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -200,3 +200,8 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
+
+.q-menu {
+  box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px -1px #0000001a !important;
+  border-radius: 2px !important;
+}
