--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -205,3 +205,11 @@ body {
   box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px -1px #0000001a !important;
   border-radius: 2px !important;
 }
+
+.titulo {
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #37474f;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
