--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -217,3 +217,7 @@ body {
 .q-drawer--left.q-drawer--bordered {
   border-right: 1px solid rgba(0, 0, 0, 0.05) !important;
 }
+
+.q-header .q-layout__shadow:after {
+  bottom: 0 !important;
+}
