--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -214,6 +214,14 @@ body {
   letter-spacing: 0.5px;
 }
 
+.tabela-cabecalho {
+  background-color: #f8f9fa !important;
+  font-weight: 600 !important;
+  text-transform: uppercase !important;
+  font-size: 0.75rem !important;
+  color: #495057 !important;
+}
+
 .q-drawer--left.q-drawer--bordered {
   border-right: 1px solid rgba(0, 0, 0, 0.05) !important;
 }
