--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -107,9 +107,9 @@ body {
   min-height: 0;
 }
 
-.q-dialog__inner > div {
-  border-radius: 2px !important;
-}
+// .q-dialog__inner > div {
+//   border-radius: 2px !important;
+// }
 
 // REMOVE A DUPLA BARRA DE ROLAGEM
 .q-dialog__inner--minimized {
