--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -6,7 +6,7 @@ $dark: #2f3542; // Cinza escuro
 $light: #f1f2f6; // Cinza muito claro
 
 // === CORES DE STATUS (adaptadas para Lemo) ===
-$positive: #00f5a0; // Verde neon (mantido - combina com folhas)
+$positive: #198754; // Verde neon (mantido - combina com folhas)
 $negative: #ff4757; // Vermelho vibrante (mantido)
 $info: #48dbfb; // Azul ciano (mantido)
 
