--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,3 @@
-// sobrescreve variáveis do Quasar antes do import
-$generic-border-radius: 2px; // ou qualquer valor desejado, ex: 8px, 0.5rem, etc
-
 body {
   font-family: "Roboto", sans-serif !important; // Define a fonte padrão para o corpo do documento
   background-color: #f5f5f5 !important; // Cor de fundo clara e neutra
@@ -12,6 +9,10 @@ body {
 
 .w-full {
   width: 100%;
+}
+
+.h-full {
+  height: 100%;
 }
 
 // AJUSTANDO O INPUT PARA FICAR COMO O FORM-CONTROL DO BOOTSTRAP
